--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "compact": "^1.0.0",
     "css": "^3.0.0",
+    "fontawesome": "^5.6.3",
     "heroku": "^7.65.0",
     "sass": "^1.32.8"
   }
